# detr_pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config_inference/: evaluation.yaml
config_training/: default.yaml
detr/: callbacks.py  evaluator.py  optimizers.py  schedulers.py  trainer.py
detr/config/: __init__.py  config.py  utils.py
detr/data/: __init__.py  datamodule.py  dataset.py  transforms.py  utils.py
detr/loggers/: __init__.py  base.py  mlflow.py  pylogger.py  terminal.py  wandb.py
detr/losses/: __init__.py  detr_loss.py  losses.py  matcher.py
detr/metrics/: __init__.py  base.py  storage.py
detr/model/: __init__.py  backbone.py  base.py  detr.py  position_encoding.py  postprocess.py  transformer.py  utils.py
detr/modules/: __init__.py  base.py  detr.py
detr/utils/: contants.py  files.py  misc.py  ops.py  registry.py  torch_utils.py  types.py  visualization.py
scripts/: eval.py  prepare_coco.sh  train.py
tests/: detr_model.py
tests/data/: coco.py  datamodule.py
