[tool.poetry]
name = "detr"
version = "0.1.0"
description = ""
authors = ["Tymoteusz Lindner <tymoteusz.lindner@gmail.com>"]
readme = "README.md"
packages = [{ include = "detr" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.5.1"
torchvision = "0.20.1"
opencv-python = "4.10.0.84"
matplotlib = "3.9.2"
pre-commit = "4.0.1"
tqdm = "4.66.6"
gdown = "^5.2.0"
scipy = "^1.15.2"
numpy = "^2.2.4"
pycocotools = "^2.0.8"
distinctipy = "^1.3.4"
mlflow = "^2.21.3"
wandb = "^0.19.9"
dacite = "^1.9.2"
colorlog = "^6.9.0"
pandas = "^2.2.3"
torchmetrics = "^1.7.1"
torchinfo = "^1.8.0"
thop = "^0.1.1.post2209072238"
ptflops = "^0.7.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
